Small improvements to tests